[gd_scene load_steps=11 format=2]

[ext_resource path="res://Script/BR100_module.gd" type="Script" id=1]
[ext_resource path="res://Script/Interpreter_BR.gd" type="Script" id=2]
[ext_resource path="res://engine_asset/health_bar_fg.tres" type="StyleBox" id=3]
[ext_resource path="res://ObjectTile/BR_100_RIGHT.png" type="Texture" id=4]
[ext_resource path="res://ObjectTile/BR_100_UP.png" type="Texture" id=5]
[ext_resource path="res://ObjectTile/BR_100_DOWN.png" type="Texture" id=6]
[ext_resource path="res://ObjectTile/BR_100_LEFT.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "EAST",
"speed": 1.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "NORTH",
"speed": 1.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "SOUTH",
"speed": 1.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "WEST",
"speed": 1.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 157.091

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31.5814, 31.7561 )

[node name="BR100_module" type="KinematicBody2D" groups=[
"Unit",
]]
position = Vector2( 32, 32 )
script = ExtResource( 1 )

[node name="BR100_Interpreter" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Clock_bar" type="ProgressBar" parent="."]
visible = false
margin_left = -50.0
margin_top = -46.0
margin_right = 49.0
margin_bottom = -30.0
step = 1.0

[node name="Health_bar" type="ProgressBar" parent="."]
margin_left = -19.0
margin_top = -26.0
margin_right = 19.0
margin_bottom = -20.0
custom_styles/fg = ExtResource( 3 )
custom_styles/bg = ExtResource( 3 )
step = 1.0
value = 100.0
percent_visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "NORTH"

[node name="Movement" type="Tween" parent="."]

[node name="Collision_checker" type="RayCast2D" parent="."]
visible = false
enabled = true

[node name="Look_area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Look_area"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )

